--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "framer-motion": "^10.8.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-intersection-observer": "^9.4.3",
-    "react-router-dom": "^6.9.0",
-    "react-toastify": "^9.1.2"
+    "react-router-dom": "^6.9.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
