--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-intersection-observer": "^9.4.3",
+    "react-photo-view": "^1.2.3",
     "react-router-dom": "^6.9.0"
   },
   "devDependencies": {
