--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "framer-motion": "^10.8.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-hot-toast": "^2.4.1",
     "react-intersection-observer": "^9.4.3",
     "react-photo-view": "^1.2.3",
