--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7",
+    "terser": "^5.34.1",
     "vite": "^4.2.0",
     "vite-plugin-svgr": "^2.4.0"
   }
